Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
@@ -1,4 +1,4 @@
-## 3.2 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula) ##
+## 3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula) ##
 
 The **Trusted Computing Base (TCB)** refers to the core components of a system that are responsible for enforcing security. It includes:
 - The Operating System Kernel
@@ -10,18 +10,24 @@ If the TCB is compromised, the entire system is at risk, which is why it must be
 ```mermaid
 stateDiagram-v2
     [*] --> UserRequest
+    
+    UserRequest --> TCB_Evaluation : Request Resource
+    
+    state TCB_Evaluation {
+        direction TB
+        [*] --> PolicyCheck
+        PolicyCheck --> Result
+    }
 
-    UserRequest --> TCB_ChecksAccess : Request access to resource
-    TCB_ChecksAccess --> AccessGranted : Policy allows it
-    TCB_ChecksAccess --> AccessDenied : Policy denies it
+    TCB_Evaluation --> AccessGranted : Policy Allows
+    TCB_Evaluation --> AccessDenied : Policy Denies
 
-    note right of TCB_ChecksAccess
-      The TCB evaluates all access requests
-      using mandatory security policies.
-      It must be protected from tampering.
+    note right of TCB_Evaluation
+        <b>TCB Requirements:</b>
+        <br/>1. Evaluate all requests
+        <br/>2. Tamper-proof
+        <br/>3. Small enough to verify
     end note
-
-
 ```
 
 The **security perimeter** defines the boundary between trusted and untrusted areas of a system. It includes firewalls, encryption, access controls, and authentication mechanisms that protect internal systems from external threats.
@@ -36,55 +42,63 @@ For example a company's internal network (trusted) is separated from the interne
 **Cascading Composition:**
 ```mermaid
 stateDiagram-v2
+    direction LR
+
     [*] --> SystemA
-    SystemA --> SystemB : Output of A → Input of B
+    SystemA --> SystemB : "Output A as Input B"
     SystemB --> FinalOutput
 
     note right of SystemA
-      System A processes input securely
+        <b>System A:</b>
+        <br/>Processes input
+        <br/>at its own security level.
     end note
 
     note right of SystemB
-      System B must handle As output securely
+        <b>System B:</b>
+        <br/>Must maintain security
+        <br/>of System A's data.
     end note
-
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 **Feedback Composition:**
 ```mermaid
 stateDiagram-v2
+    direction LR
+
     [*] --> SystemA
-    SystemA --> SystemB : Output loops back as new input
-    SystemB --> SystemA : Output loops back as new input
+    SystemA --> SystemB : Processed Output
+    SystemB --> SystemA : Feedback Loop
     SystemB --> FinalOutput
 
     note right of SystemA
-      Security must be enforced continuously
-      as output affects future behavior
+        <b>Continuous Enforcement:</b>
+        <br/>Outputs influence future
+        <br/>inputs and behaviors.
     end note
-
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 **Hook-up composition:**
 ```mermaid
 stateDiagram-v2
+    direction TB
+
+    state SharedEnvironment {
+        [*] --> Secure_Mediation
+    }
+
     [*] --> SystemA
     [*] --> SystemB
-    SystemA --> SharedEnvironment
-    SystemB --> SharedEnvironment
+    
+    SystemA --> SharedEnvironment : Input A
+    SystemB --> SharedEnvironment : Input B
+    
     SharedEnvironment --> FinalOutput
 
     note right of SharedEnvironment
-      Interaction point must preserve
-      confidentiality, integrity, and isolation
+        <b>Risk Point:</b>
+        <br/>Must preserve Isolation,
+        <br/>Confidentiality, & Integrity.
     end note
-
-
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 ---
@@ -107,13 +121,22 @@ In the following you can find a login system which is an example of a state mach
 ```mermaid
 stateDiagram-v2
     [*] --> LoggedOut
-    LoggedOut --> LoggingIn: User enters credentials
-    LoggingIn --> LoggedIn: Credentials valid
-    LoggingIn --> LoggedOut: Credentials invalid
-    LoggedIn --> LoggedOut: User logs out
+    
+    LoggedOut --> LoggingIn : User Credentials
+    
+    state LoggingIn {
+        [*] --> Verifying
+    }
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    LoggingIn --> LoggedIn : Valid
+    LoggingIn --> LoggedOut : Invalid
+    LoggedIn --> LoggedOut : Manual Logout / Timeout
+
+    note right of LoggedIn
+        <b>Active Session:</b>
+        <br/>Enforce session timeout
+        <br/>& secure token handling.
+    end note
 ```
 
 The **lattice** model is used in mandatory access control (MAC) systems, where data and users are assigned security labels. These labels determine who can access what, using a mathematical structure called a lattice.
@@ -138,14 +161,25 @@ These are the main components of a state machine model:
 
 ```mermaid
 stateDiagram-v2
-    [*] --> RequestAccess: Subject requests access to Object
-    RequestAccess --> CheckLabels: Compare subject and object labels
-    CheckLabels --> AccessGranted: If subject dominates object (read) or object dominates subject (write)
-    CheckLabels --> AccessDenied: If dominance rule is not satisfied
+    direction TB
 
+    [*] --> RequestAccess
+    RequestAccess --> CheckLabels : Evaluate Clearance vs Classification
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    state CheckLabels {
+        [*] --> DominanceCheck
+        DominanceCheck --> Comparison : Subject Dominates Object?
+    }
+
+    CheckLabels --> AccessGranted : Rule Satisfied
+    CheckLabels --> AccessDenied : Rule Violated
+
+    note right of CheckLabels
+        <b>MAC Evaluation:</b>
+        <br/>Enforced by the TCB.
+        <br/>Based on security labels
+        <br/>(e.g., Secret vs Top Secret).
+    end note
 ```
 
 **Information Flow** Models ensure that data flows in a secure manner, preventing leaks or unauthorized access. They focus on how information moves within a system rather than just access permissions.
@@ -169,13 +203,26 @@ These are the main components of an information flow model:
 
 ```mermaid
 stateDiagram-v2
-    [*] --> FlowRequest: Subject attempts to send or receive information
-    FlowRequest --> CheckPolicy: System checks flow against security policy
-    CheckPolicy --> AllowedFlow: Flow is permitted under current policy
-    CheckPolicy --> BlockedFlow: Flow is denied to prevent a policy violation
+    direction TB
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    [*] --> FlowRequest
+    FlowRequest --> CheckPolicy : Subject → Object Interaction
+
+    state CheckPolicy {
+        direction LR
+        [*] --> ValidatePath
+        ValidatePath --> SecurityMatrix : Check Directional Rules
+    }
+
+    CheckPolicy --> AllowedFlow : Authorized Transition
+    CheckPolicy --> BlockedFlow : Security Policy Violation
+
+    note right of CheckPolicy
+        <b>Information Flow:</b>
+        <br/>Prevents unauthorized data
+        <br/>flow between security levels
+        <br/>or system compartments.
+    end note
 ```
 
 A **noninterference model** ensures that high-level users (e.g., admins, military officers) do not influence low-level users (e.g., general employees, soldiers) in a way that reveals sensitive data. The idea is that actions taken by high-privileged users should not affect what lower-privileged users see or do. This model is often used to prevent covert channels (hidden ways for users to communicate unauthorized information).
@@ -195,27 +242,32 @@ These are the main components of a non-interference model:
 
 ```mermaid
 stateDiagram-v2
-    [*] --> L_Subject_Performs_Action
-    L_Subject_Performs_Action --> System_State_L
-    System_State_L --> L_Observes_State
+    direction LR
 
-    [*] --> H_Subject_Performs_Action
-    H_Subject_Performs_Action --> System_State_H
+    state High_Security_Domain {
+        [*] --> H_Action
+        H_Action --> H_State_Change : Subject H performs action
+    }
 
-    note right of System_State_H
-      High-level action changes system state,
-      but low-level subjects cannot observe it.
+    state Low_Security_Domain {
+        [*] --> L_Action
+        L_Action --> L_State_Change : Subject L performs action
+        L_State_Change --> L_Observation : Subject L observes result
+    }
+
+    note right of High_Security_Domain
+        <b>Non-Interference:</b>
+        <br/>High-level actions do <u>not</u>
+        <br/>change the state observed
+        <br/>by low-level subjects.
     end note
 
-    note right of L_Observes_State
-      Low-level subject only sees effects
-      of low-level actions.
-      High-level actions are invisible.
+    note left of Low_Security_Domain
+        <b>Isolation:</b>
+        <br/>L sees only the results
+        <br/>of L actions. No data
+        <br/>leaks from H domain.
     end note
-
-
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 ---
@@ -257,25 +309,25 @@ stateDiagram-v2
     state "File B (Secret)" as FileS
     state "File C (Confidential)" as FileC
 
-    User --> FileTS : ❌ Read (No Read Up)
-    User --> FileS : ✅ Read ✅ Write
-    User --> FileC : ❌ Write (No Write Down)
+    User --> FileTS : "Block: Read (No Read Up)"
+    User --> FileS : "Allow: Read/Write"
+    User --> FileC : "Block: Write (No Write Down)"
 
     note right of FileTS
-      Higher level Can't read (No Read Up)
+        <b>Simple Security:</b>
+        <br/>No Read Up
     end note
 
     note right of FileC
-      Lower level Can't write (No Write Down)
+        <b>Star Property (*):</b>
+        <br/>No Write Down
     end note
 
     note left of User
-      "Secret-level" user wants to access data
+        The user interacts with 
+        objects above, at, and 
+        below their clearance.
     end note
-
-
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 :brain: The Bell-LaPadula Model focuses on maintaining confidentiality by enforcing two (+1 ds-property) key rules: the "no read up" (a subject cannot read data at a higher security level) and the "no write down" (a subject cannot write data to a lower security level). It ensures data confidentiality by restricting access based on security clearances.
@@ -312,28 +364,29 @@ stateDiagram-v2
     direction TB
 
     state "User (Medium Integrity)" as User
-    state "File A (High)" as FileHigh
-    state "File B (Medium)" as FileMed
-    state "File C (Low)" as FileLow
+    state "File A (High Integrity)" as FileHigh
+    state "File B (Medium Integrity)" as FileMed
+    state "File C (Low Integrity)" as FileLow
 
-    User --> FileHigh : ❌ Write (No Write Up)
-    User --> FileMed : ✅ Read/Write
-    User --> FileLow : ❌ Read (No Read Down)
+    User --> FileHigh : "Block: Write (No Write Up)"
+    User --> FileMed : "Allow: Read/Write"
+    User --> FileLow : "Block: Read (No Read Down)"
 
     note right of FileHigh
-      Higher level Can't write (No Write Up)
+        <b>Star (*) Integrity:</b>
+        <br/>No Write Up
     end note
 
     note right of FileLow
-      Lower level Can't read (No Read Down)
+        <b>Simple Integrity:</b>
+        <br/>No Read Down
     end note
 
     note left of User
-      "Medium-level" user wants to preserve integrity
+        The goal is to prevent
+        low-integrity data from
+        contaminating the subject.
     end note
-
-   classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 
@@ -371,29 +424,23 @@ Limitations of the Take-Grant Model:
 - Not designed for mandatory access control (MAC) systems, where permissions are strictly defined by policies.
 
 ```mermaid
-flowchart TB
+flowchart TD
+    subgraph TakeRule ["Take Rule (Subject S takes rights from Object O1)"]
+        direction LR
+        T1["S has 'take' over O1<br/>O1 has 'read' over O2"] 
+        T2["S now has 'read' over O2"]
+        T1 -->|Result| T2
+    end
 
-subgraph Take_Rule
-    direction LR
-    S1_Take1[["S1"]] -->|t| O1_Take1[["O1"]] -->|r| O2_Take1[["O2"]]
-    S1_Take2[["S1"]] -->|r| O1_Take2[["O1"]] -->|r| O2_Take2[["O2"]]
-    S1_Take2[["S1"]] ==>|r| O2_Take2[["O2"]]
-    label1[Take Rule  - Before]:::label -.- S1_Take1
-    label2[Take Rule - After]:::label -.- S1_Take2
-end
+    subgraph GrantRule ["Grant Rule (Subject S grants rights to Object O1)"]
+        direction LR
+        G1["S has 'grant' over O1<br/>S has 'read' over O2"]
+        G2["O1 now has 'read' over O2"]
+        G1 -->|Result| G2
+    end
 
-subgraph Grant_Rule
-    direction LR
-    S1_Grant1[["S1"]] -->|g| O1_Grant1[["O1"]]
-    S1_Grant1[["S1"]] -->|r| O2_Grant1[["O2"]]
-    S1_Grant2[["S1"]] -->|g| O1_Grant2[["O1"]] ==>|r| O2_Grant2[["O2"]]
-    S1_Grant2[["S1"]] -->|r| O2_Grant2[["O2"]]
-    label3[Grant Rule  - Before]:::label -.- S1_Grant1
-    label4[Grant Rule - After]:::label -.- S1_Grant2
-end
-
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    style TakeRule fill:#f9f9f9,stroke:#009688
+    style GrantRule fill:#f9f9f9,stroke:#009688
 
 ```
 
@@ -431,25 +478,21 @@ Limitations of the Clark-Wilson model:
 ```mermaid
 
 flowchart TD
-    subgraph "Certification - After"
-        CW1a[User]
-        CW2a[Certified T.P.]
-        CW3a[CDI: Customer Data]
-        CW1a -->|invoke| CW2a
-        CW2a -->|read/write| CW3a
+    subgraph Unauthorized ["❌ Uncertified Flow (Risk of Corruption)"]
+        direction LR
+        U1[User] -->|Direct Access| CDI_1[CDI: Customer Data]
+        style U1 fill:#fdd,stroke:#f66
     end
 
-
-    subgraph "Certification - Before"
-        CW1[User]
-        CW2[Uncertified T.P.]
-        CW3[CDI: Customer Data]
-        CW1 --> CW2
-        CW2 --> CW3
+    subgraph Authorized ["✅ Certified Flow (Clark-Wilson)"]
+        direction LR
+        U2[User] -->|1. Invoke| TP[TP: Transformation Procedure]
+        TP -->|2. Validated Access| CDI_2[CDI: Customer Data]
+        IVP{{IVP: Integrity Verification}} -.->|Audits| CDI_2
     end
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    style Authorized fill:#f0fff0,stroke:#009688
+    style Unauthorized fill:#fff0f0,stroke:#666
 
 ```
 
@@ -480,15 +523,19 @@ Limitations of the Brewer and Nash Model:
 - May restrict legitimate work if employees need to collaborate across different companies.
 
 ```mermaid
-flowchart LR
-    A[User requests access to Company A data] --> B{Has user accessed<br> competing company data?}
-    B -- No --> C[Access granted to Company A]
-    C --> D[User now associated<br> with Company A's conflict class]
-    B -- Yes --> E[Access denied to Company A]
+flowchart TD
+    A["Subject requests access to<br/><b>Company A</b> (Bank)"] --> B{"Is there a <b>Conflict of Interest</b>?<br/>(Has Subject accessed Bank B?)"}
+    
+    B -- "No (Wall is Clear)" --> C["Access GRANTED"]
+    C --> D["Subject is now 'Inside' the<br/>Company A Conflict Class"]
+    
+    B -- "Yes (Conflict Found)" --> E["Access DENIED"]
+    E --> F["Wall prevents data leakage<br/>between competitors"]
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
-
+    style A fill:#fff,stroke:#333
+    style C fill:#e0ffe0,stroke:#009688
+    style E fill:#ffe0e0,stroke:#f66
+    style B fill:#fff4dd,stroke:#d4a017
 ```
 
 The **Graham-Denning Model** is an access control model that defines how subjects (users, processes) can securely create, delete, and manage access rights for objects (files, resources) in a system. It provides a set of rules that regulate how rights are assigned and removed, making it useful for operating systems, databases, and security policies that require structured access control mechanisms.
@@ -527,32 +574,21 @@ Limitations of the Graham-Denning model:
 
 ```mermaid
 flowchart TD
-%% Subjects
-    SA[Subject A: Admin]
-    SB[Subject B: Process/User]
+    subgraph Operations ["8 Primitive Commands"]
+        direction LR
+        P1["Create / Delete<br/>Object"]
+        P2["Create / Delete<br/>Subject"]
+        P3["Grant / Delete<br/>Access Right"]
+        P4["Transfer / Read<br/>Access Right"]
+    end
 
-%% Objects
-    OF[Object File.txt]
-    OD[Object DB-Record]
-
-%% Access Control Matrix
-    ACM[[Access Control Matrix]]
-
-%% Operations on Subjects & Objects
-    SA -->|Create Subject| SB
-    SA -->|Create Object| OF
-    SA -->|Delete Object| OD
-    SA -->|Delete Subject| SB
-
-%% Operations on Rights
-    SA -->|Read Access Rights| ACM
-    SA -->|Grant Read| SB
-    SA -->|Delete Access Rights| SB
-    SA -->|Transfer Ownership| SB
+    Admin[Subject: Admin] -->|Commands| ACM("<b>Graham-Denning Matrix</b>")
     
+    ACM -->|Manages| S2[Subject: User/Process]
+    ACM -->|Manages| O1[Object: File/DB]
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    style ACM fill:#f9f9f9,stroke:#009688,stroke-width:2px
+    style Operations fill:#fff4dd,stroke:#d4a017
 
 ```
 
@@ -590,58 +626,32 @@ Limitations of the HRU Model:
 ```mermaid
 
 flowchart TD
-    A[Goal: Mathematical Access Control + Security Decidability]
+    A["<b>Goal: HRU Model</b><br/>Mathematical Control & Decidability"]
 
-    subgraph Access Control Matrix -ACM
-        ACM1[Subjects]
-        ACM2[Objects]
-        ACM3[Rights: Read, Write, Execute, Grant, Delete]
+    subgraph ACM ["Access Control Matrix (ACM)"]
+        direction LR
+        ACM1[Subjects] --- ACM2[Objects] --- ACM3[Rights]
     end
 
-    subgraph Key Elements
-        S[Subjects]
-        O[Objects]
-        R[Access Rights]
+    subgraph Operations ["Atomic Operations"]
+        direction TB
+        CO[Enter/Delete Right]
+        CS[Create/Destroy Subject]
+        DO[Create/Destroy Object]
     end
 
-    A --> ACM1
-    A --> ACM2
-    A --> ACM3
-    A --> S
-    A --> O
-    A --> R
-
-    subgraph Key Operations
-        CO[Create Object]
-        CS[Create Subject]
-        DO[Delete Object]
-        DS[Delete Subject]
-        RAR[Read Access Rights]
-        GAR[Grant Access Rights]
-        DAR[Delete Access Rights]
-        TAR[Transfer Access Rights]
+    subgraph Decidability ["Security Decidability"]
+        SD["Can we prove a system state<br/>is always 'Safe'?"]
     end
 
-    ACM3 --> CO
-    ACM3 --> CS
-    ACM3 --> DO
-    ACM3 --> DS
-    ACM3 --> RAR
-    ACM3 --> GAR
-    ACM3 --> DAR
-    ACM3 --> TAR
-
-    A --> SecurityDecidability["Security Decidability:<br/>Can we determine if the system is always secure?"]
+    A --> ACM
+    A --> Operations
+    A --> Decidability
 
     style A fill:#d3e6ff,stroke:#0066cc,stroke-width:2px
-    style Access_Control_Matrix fill:#eaf7ea,stroke:#4caf50
-    style Key_Operations fill:#fff4e6,stroke:#ffa000
-    style SecurityDecidability fill:#ffe4e1,stroke:#ff6b6b
-
-
-
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+    style ACM fill:#f2fff2,stroke:#4caf50
+    style Operations fill:#fff4e6,stroke:#ffa000
+    style Decidability fill:#ffe4e1,stroke:#ff6b6b
 
 ```
 
