Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -298,6 +298,7 @@ sequenceDiagram
     participant Bob as Bob (Receiver)
     participant Eve as Eve (Attacker)
     participant CA as Certificate Authority (for asymmetric example)
+    participant K as Shared Secret Key (K)
 
     %% --- Symmetric Encryption Part ---
     Note over Alice,Bob: 🔷 Symmetric Encryption (Same Key for Encrypt & Decrypt)
@@ -464,30 +465,31 @@ Once a key is generated, it must be stored securely to prevent unauthorized acce
 :bulb: An application should never see or handle the key directly. It should only request cryptographic operations from a trusted module via secure APIs (PKCS #11, KMIP, JCE/JCA, etc.), ensuring that key material remains isolated, auditable, and resilient against compromise.
 
 ```mermaid
-flowchart LR
+graph LR
     subgraph Bad_Practice["❌ Bad Practice"]
-        A1[Hardcoded Keys in Source Code]
-        A2[Keys in Plaintext Files]
-        A3[Exposed in Environment Variables]
-        A1 --> Risk1[Reverse Engineering Risk]
-        A2 --> Risk2[Filesystem Compromise]
-        A3 --> Risk3[Credential Harvesting]
+        A1["Hardcoded Keys in Source Code"]
+        A2["Keys in Plaintext Files"]
+        A3["Exposed in Environment Variables"]
+        A1 --> Risk1["Reverse Engineering Risk"]
+        A2 --> Risk2["Filesystem Compromise"]
+        A3 --> Risk3["Credential Harvesting"]
     end
 
     subgraph Good_Practice["✅ Good Practice"]
-        B1[Hardware Security Module - HSM]
-        B2[Secure Enclave - SGX, TrustZone]
-        B3[Key Management System - AWS KMS, Vault]
-        B1 --> SecureOps[Perform Crypto Ops Internally]
+        B1["Hardware Security Module - HSM"]
+        B2["Secure Enclave - SGX, TrustZone"]
+        B3["Key Management System - AWS KMS, Vault"]
+        B1 --> SecureOps["Perform Crypto Ops Internally"]
         B2 --> SecureOps
         B3 --> SecureOps
-        SecureOps --> NoKeyExposure[Keys Never Leave Secure Boundary]
+        SecureOps --> NoKeyExposure["Keys Never Leave Secure Boundary"]
     end
 
     Bad_Practice -.->|Avoid| Good_Practice
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 To prevent a single point of failure, key management must incorporate principles of separation of duties, dual control, and split knowledge. These measures reduce the risk of insider threats and unauthorized key access.
