Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -590,29 +590,29 @@ Here’s how it works:
 -The digital signature also authenticates the identity of the sender, ensuring **non-repudiation**. The sender cannot later deny having sent the message because only they hold the private key used to create the signature.
 
 ```mermaid
-flowchart LR
+graph LR
     subgraph Sender["Sender - Signer"]
-        A[Document/Data] --> H1[Hash Function → Message Digest]
-        H1 --> S1[Sign Digest with Private Key → Digital Signature]
+        A["Document/Data"] --> H1["Hash Function → Message Digest"]
+        H1 --> S1["Sign Digest with Private Key → Digital Signature"]
     end
 
     subgraph Transmission["Transmission"]
-        S1 --> P[Signature Sent with Document]
+        S1 --> P["Signature Sent with Document"]
         A --> P
     end
 
     subgraph Receiver["Receiver - Verifier"]
-        P --> H2[Hash Received Document → New Digest]
-        P --> V1[Verify Signature with Public Key - PKI]
-        V1 --> Compare[Compare Verified Digest with New Digest]
+        P --> H2["Hash Received Document → New Digest"]
+        P --> V1["Verify Signature with Public Key - PKI"]
+        V1 --> Compare["Compare Verified Digest with New Digest"]
     end
 
-    Compare -->|Match| OK[Integrity Confirmed & Non-Repudiation Achieved]
-    Compare -->|Mismatch| Fail[Document Tampered or Invalid Signature]
+    Compare -->|Match| OK["Integrity Confirmed & Non-Repudiation Achieved"]
+    Compare -->|Mismatch| Fail["Document Tampered or Invalid Signature"]
 
-    
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 **Non-repudiation** refers to the ability to prove that a message or transaction originated from a specific sender. In the context of digital signatures, it ensures that the sender cannot deny sending the message after it has been signed. Since only the sender has access to their private key (which is used to sign the document), the sender cannot later claim that they did not sign it. This concept is crucial in legal and financial transactions, where accountability is necessary.
@@ -633,27 +633,28 @@ Here’s how digital certificates work:
 Digital certificates help establish trust because the recipient of the certificate can verify that it was issued by a trusted CA. By using the CA's public key, they can validate that the certificate has not been altered or tampered with. This ensures that the public key in the certificate truly belongs to the person or entity it claims to represent achieving authentication.
 
 ```mermaid
-flowchart LR
+graph LR
     subgraph CA["Certificate Authority CA"]
-        C1[Generates and Signs Digital Certificate] --> Cert[Digital Certificate Public Key plus Identity]
+        C1["Generates and Signs Digital Certificate"] --> Cert["Digital Certificate Public Key plus Identity"]
     end
 
     subgraph User["User or Device"]
-        Request[Generates Key Pair Public Key plus Private Key] --> C2[Submits CSR Certificate Signing Request]
+        Request["Generates Key Pair Public Key plus Private Key"] --> C2["Submits CSR Certificate Signing Request"]
         C2 --> CA
-        Cert --> Install[Installs Signed Certificate]
+        Cert --> Install["Installs Signed Certificate"]
     end
 
     subgraph RelyingParty["Client or Browser or Verifier"]
-        Verify[Checks Certificate Against Trusted CA List] --> Valid[Identity Confirmed → AUTHENTICATION]
-        Verify --> Invalid[Certificate Invalid → Connection Rejected]
+        Verify["Checks Certificate Against Trusted CA List"] --> Valid["Identity Confirmed → AUTHENTICATION"]
+        Verify --> Invalid["Certificate Invalid → Connection Rejected"]
     end
 
-    Install --> Comm[Secure Communication Using Certificate]
+    Install --> Comm["Secure Communication Using Certificate"]
     Comm --> Verify
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 ### Open Questions ###
