--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -186,8 +186,10 @@ flowchart TB
   Analyse --> Derive[Derive keystream bits or key material]
   Derive --> Test[Test candidate key or keystream on other ciphertext]
   Test --> Success{Valid plaintext recovered?}
+
   Success -->|Yes| Compromise[Decrypt more messages or impersonate sender]
-  Success -->|No| Iterate[Refine hypotheses or collect more pairs] --> Analyse
+  Success -->|No| Iterate[Refine hypotheses or collect more pairs]
+  Iterate --> Analyse
 
   %% Examples
   subgraph Examples
@@ -209,14 +211,15 @@ flowchart TB
     M5[Minimize predictable plaintext and pad or randomize message formats]
   end
 
-  Compromise -. mitigated by .-> M1
-  Compromise -. mitigated by .-> M2
-  Compromise -. mitigated by .-> M3
-  Compromise -. mitigated by .-> M4
-  Compromise -. mitigated by .-> M5
+  Compromise -.->|mitigated by| M1
+  Compromise -.->|mitigated by| M2
+  Compromise -.->|mitigated by| M3
+  Compromise -.->|mitigated by| M4
+  Compromise -.->|mitigated by| M5
 
 classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
 classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 ### Open Questions ###
