Update 3.Q.1 Easy Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
@@ -1,4 +1,4 @@
-## Easy Questions ## 
+## 3.Q.1 Easy Questions ## 
 
 1. You are tasked with improving physical security measures for a SCADA (Supervisory Control and Data Acquisition) system in a critical infrastructure facility. Considering the various components involved, which of the following would present the greatest challenges in ensuring robust physical security?
 
