Update 3.Q.2 Hard Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
@@ -1,4 +1,4 @@
-## Hard Questions ##
+## 3.Q.2 Hard Questions ##
 
 1. As the IT security manager for a large organization, you are tasked with selecting the most effective surveillance cameras to protect your company's data center. What key characteristics should you prioritize in your evaluation process to ensure robust security and optimal monitoring capabilities? (Choose all that apply)
 
