Update 4.01 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.01 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.01 Apply secure design principles in network architectures.md
@@ -58,26 +58,18 @@ For example:
 ```mermaid
 flowchart LR
 
-    A["Application – DATA<br/>
-    [ Payload ]"]
+    A["Application – DATA\n[ Payload ]"]
 
-    B["Transport – SEGMENT<br/>
-    [ TCP/UDP Header | Payload ]"]
+    B["Transport – SEGMENT\n[ TCP/UDP Header | Payload ]"]
 
-    C["Network – PACKET<br/>
-    [ IP Header | Payload ]"]
+    C["Network – PACKET\n[ IP Header | Payload ]"]
 
-    D["Data Link – FRAME<br/>
-    [ MAC Header | Payload | FCS ]"]
+    D["Data Link – FRAME\n[ MAC Header | Payload | FCS ]"]
 
-    E["Physical – BITS<br/>
-    [ 101010101010 ]"]
-
-
+    E["Physical – BITS\n[ 101010101010 ]"]
 
     classDef grey fill:#f2f2f2,stroke:#555,color:#000
     class A,B,C,D,E grey
-
 
 ```
 
@@ -613,36 +605,34 @@ IKE (Internet Key Exchange): A protocol used to securely exchange encryption key
 
 ```mermaid
 flowchart LR
-    IPSEC[IPsec - Internet Protocol Security]:::title
+    IPSEC["IPsec - Internet Protocol Security"]:::title
 
     %% Protocols
-    IPSEC --> Protocols[Protocols]
-    Protocols --> AH[AH - Authentication Header]
-    AH --> AHDesc[Provides **integrity** and **authentication** of IP packets. Does **not** encrypt payload. Protects against tampering and replay attacks.]
-    Protocols --> ESP[ESP - Encapsulating Security Payload]
-    ESP --> ESPDesc[Provides **confidentiality**, **integrity**, and **authentication**. Can encrypt payload and optionally provide anti-replay protection.]
+    IPSEC --> Protocols["Protocols"]
+    Protocols --> AH["AH - Authentication Header"]
+    AH --> AHDesc["Provides integrity and authentication of IP packets. Does not encrypt payload. Protects against tampering and replay attacks."]
+    Protocols --> ESP["ESP - Encapsulating Security Payload"]
+    ESP --> ESPDesc["Provides confidentiality, integrity, and authentication. Can encrypt payload and optionally provide anti-replay protection."]
 
     %% Modes
-    IPSEC --> Modes[Modes]
-    Modes --> Transport[Transport Mode]
-    Transport --> TransportDesc[Encrypts or authenticates **only the payload** of the IP packet. Used for **host-to-host** communication.]
-    Modes --> Tunnel[Tunnel Mode]
-    Tunnel --> TunnelDesc[Encrypts **entire IP packet** and encapsulates it in a new IP header. Used for **site-to-site VPNs**.]
+    IPSEC --> Modes["Modes"]
+    Modes --> Transport["Transport Mode"]
+    Transport --> TransportDesc["Encrypts or authenticates only the payload of the IP packet. Used for host-to-host communication."]
+    Modes --> Tunnel["Tunnel Mode"]
+    Tunnel --> TunnelDesc["Encrypts entire IP packet and encapsulates it in a new IP header. Used for site-to-site VPNs."]
 
     %% Key Exchange
-    IPSEC --> KeyExchange[Key Exchange]
-    KeyExchange --> IKE[Internet Key Exchange - IKE]
-    IKE --> IKEDesc[Negotiates **security associations -SAs-**, including encryption/authentication algorithms and session keys. Can use **Main or Aggressive mode**.]
-
-    %% Styling
-    classDef title fill:#f9f,stroke:#333,stroke-width:2px
-    class IPSEC title
+    IPSEC --> KeyExchange["Key Exchange"]
+    KeyExchange --> IKE["Internet Key Exchange - IKE"]
+    IKE --> IKEDesc["Negotiates security associations -SAs-, including encryption/authentication algorithms and session keys. Can use Main or Aggressive mode."]
 
     %% Styling
     classDef title fill:#e0e0e0,stroke:#333,stroke-width:2px
     class IPSEC title
+
     classDef box fill:#f5f5f5,stroke:#333,stroke-width:1px
     class Protocols,AH,AHDesc,ESP,ESPDesc,Modes,Transport,TransportDesc,Tunnel,TunnelDesc,KeyExchange,IKE,IKEDesc box
+
 ```
 
 **Secure Shell (SSH)**
@@ -1090,18 +1080,32 @@ The picture below tries to simplify and recap the relation between the metrics d
 
 ```mermaid
 flowchart LR
-    A[Network Performance] --> B[Bandwidth]
-    A --> C[Throughput]
-    A --> D[Latency]
-    A --> E[Jitter]
-    A --> F[Packet Loss]
-    A --> G[RTT]
-    A --> H[Error Rate]
-    A --> I[Signal-to-Noise Ratio]
-    A --> J[Connection Time]
-    A --> K[Network Utilization]
-    A --> L[Availability - Uptime]
-    A --> M[Flow Control]
+    A[Network Performance]
+    B[Bandwidth]
+    C[Throughput]
+    D[Latency]
+    E[Jitter]
+    F[Packet Loss]
+    G[RTT]
+    H[Error Rate]
+    I[Signal-to-Noise Ratio]
+    J[Connection Time]
+    K[Network Utilization]
+    L[Availability - Uptime]
+    M[Flow Control]
+
+    A --> B
+    A --> C
+    A --> D
+    A --> E
+    A --> F
+    A --> G
+    A --> H
+    A --> I
+    A --> J
+    A --> K
+    A --> L
+    A --> M
 
     B -->|Capacity| C
     C -->|Real-world data rate| D
@@ -1116,6 +1120,7 @@ flowchart LR
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 ### Open Questions ###
