--- a/DOMAIN4: Communication and Network Security/4.D.2 DNS.md
+++ b/DOMAIN4: Communication and Network Security/4.D.2 DNS.md
@@ -100,15 +100,15 @@ In other words, the local NS does each lookup step itself until reaching the aut
 
 ```mermaid
 graph LR
-    Client[Client] -->|1: Query it.wikipedia.org?| LocalNS[Local NS 8.8.8.8]
-    LocalNS -->|2: Query org?| RootNS[Root NS]
+    Client["Client"] -->|1: Query it.wikipedia.org?| LocalNS["Local NS 8.8.8.8"]
+    LocalNS -->|2: Query org?| RootNS["Root NS"]
     RootNS -->|3: wikipedia.org NS?| LocalNS
-    LocalNS -->|4: Query wikipedia.org?| TLDNS[TLD NS]
+    LocalNS -->|4: Query wikipedia.org?| TLDNS["TLD NS"]
     TLDNS -->|5: it.wikipedia.org NS?| LocalNS
-    LocalNS -->|6: Query it.wikipedia.org?| DomainAuth[Domain Auth. ns0.wikimedia.org]
+    LocalNS -->|6: Query it.wikipedia.org?| DomainAuth["Domain Auth. ns0.wikimedia.org"]
     DomainAuth -->|7: IP for it.wikipedia.org| LocalNS
     LocalNS -->|8: IP for it.wikipedia.org| Client
-    Client -->|9: Connect to IP| Destination[Destination 91.198.174.192]
+    Client -->|9: Connect to IP| Destination["Destination 91.198.174.192"]
 ```
 
 **Recursive Resolution**: in this mode:
