Update 4.Q.1 Easy Questions.md

--- a/DOMAIN4: Communication and Network Security/4.Q.1 Easy Questions.md
+++ b/DOMAIN4: Communication and Network Security/4.Q.1 Easy Questions.md
@@ -1,4 +1,4 @@
-## Easy Questions ##
+## .Q.1 Easy Questions ##
 
 1. You’ve noticed that your monitoring cameras connected to the security server are experiencing intermittent issues: the video feed occasionally disappears, and at other times, the image quality degrades significantly. What troubleshooting steps would you take first?
 
