Update 4.Q.2 Hard Questions.md

--- a/DOMAIN4: Communication and Network Security/4.Q.2 Hard Questions.md
+++ b/DOMAIN4: Communication and Network Security/4.Q.2 Hard Questions.md
@@ -1,4 +1,4 @@
-## Hard Questions ##
+## .Q.2 Hard Questions ##
 
 1. Your company needs to implement a secure communication protocol between internal systems and is specifically looking for protocols that support mutual (dual) authentication. Which of the following protocols does not provide dual authentication?
 
